<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pc_magas.vodafone_fu_h300s.screens.ConnectIntoRouterActivity">

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@drawable/error_bg"
        android:visibility="invisible"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:importantForAutofill="no"
        android:text="@string/title_activity_display_router_settings"/>

    <com.google.android.material.textfield.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/menu_url"
        android:layout_width="409dp"
        android:hint="@string/menu_url"
        android:inputType="textUri"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/username"
        android:layout_width="409dp"
        android:hint="@string/router_username"
        android:inputType="text"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/menu_url" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/password"
            android:layout_width="409dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/connect_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:importantForAutofill="no"
            app:layout_constraintTop_toBottomOf="@+id/username" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/connect_btn"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:importantForAutofill="no"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />
</LinearLayout>